<!--
    Open TimeLimit Copyright <C> 2019 - 2022 Jonas Lochmann

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation version 3 of the License.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="io.timelimit.android.ui.diagnose.DiagnoseMainFragment">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_clock_button"
                    android:text="@string/diagnose_clock_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_connection_button"
                    android:text="@string/diagnose_connection_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_battery_button"
                    android:text="@string/diagnose_bat_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_fga_button"
                    android:text="@string/diagnose_fga_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_exf_button"
                    android:text="@string/diagnose_exf_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_bg_task_loop_ex_button"
                    android:text="@string/diagnose_bg_task_loop_ex"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_organization_name_button"
                    android:text="@string/diagnose_don_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    style="?materialButtonOutlinedStyle"
                    android:id="@+id/diagnose_exit_reasons_button"
                    android:text="@string/diagnose_er_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            app:fabSize="normal"
            android:src="@drawable/ic_lock_open_white_24dp"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
