<?xml version="1.0" encoding="utf-8"?>
<!--
  TimeLimit Copyright <C> 2019 - 2022 Jonas Lochmann
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation version 3 of the License.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="showGrantedMessage"
            type="boolean" />

        <variable
            name="showGrantButton"
            type="boolean" />

        <variable
            name="showSkipButton"
            type="boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:text="@string/notify_permission_title"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/notify_permission_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="@{showGrantedMessage ? View.VISIBLE : View.GONE}"
                android:gravity="center"
                android:textColor="@color/text_green"
                android:text="@string/notify_permission_text_granted"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/skip_button"
                android:visibility="@{showSkipButton ? View.VISIBLE : View.GONE}"
                android:layout_gravity="end"
                style="?borderlessButtonStyle"
                android:text="@string/notify_permission_btn_later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/grant_button"
                android:visibility="@{showGrantButton ? View.VISIBLE : View.GONE}"
                android:layout_gravity="end"
                android:text="@string/notify_permission_btn_grant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>